[tool.poetry]
name = "gaia-sdk"
version = "3.3.0-rc.1"
description = "Python SDK for the GAIA ecosystem."
authors = ["Leftshift One <contact@leftshift.one>"]

[tool.poetry.dependencies]
python = "^3.6"
Rx = "^3.1.1"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.8.1"
pytest-timeout = "^1.3"
toml = "^0.10.0"

[tool.poetry.scripts]
clean = "poetry_scripts:clean"
install = "poetry_scripts:install"
test = "poetry_scripts:test"
build = "poetry_scripts:build"
publish = "poetry_scripts:publish"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
